--- a/code/Image size plot.ipynb
+++ b/code/Image size plot.ipynb
@@ -15,19 +15,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b815f6d2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\gugli\\anaconda3\\lib\\site-packages\\scipy\\__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.24.3\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
@@ -39,12 +30,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9957a671",
    "metadata": {},
    "outputs": [],
    "source": [
-    "datadir=r\"C:\\Users\\gugli\\Python projects\\ML project\\train\"\n",
+    "datadir=r\"...\ML project\\train\"\n",
     "categories=[\"chihuahua\", \"muffin\"]"
    ]
   },
@@ -77,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "6c10adbd",
    "metadata": {},
    "outputs": [],
@@ -87,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "3bc62661",
    "metadata": {},
    "outputs": [
