--- a/code/Image size plot.ipynb
+++ b/code/Image size plot.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b815f6d2",
    "metadata": {},
    "outputs": [],
@@ -30,12 +30,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9957a671",
    "metadata": {},
    "outputs": [],
    "source": [
-    "datadir=r\"...\ML project\\train\"\n",
+    "datadir=r\"C:\\Users\\gugli\\Python projects\\ML project\\train\"\n",
     "categories=[\"chihuahua\", \"muffin\"]"
    ]
   },
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6c10adbd",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "3bc62661",
    "metadata": {},
    "outputs": [
